Sofi : - ajout du style pour la balise <A>

--- a/ezBayWeb/WebRoot/style.css
+++ b/ezBayWeb/WebRoot/style.css
@@ -10,4 +10,16 @@ body
   	scrollbar-face-color:#00A6C6;
 }
 
+a
+{
+	font-family:Times New Roman;
+	color:#00A6C6;
+	text-decoration:none;
+	cursor:pointer;
+}
+
+a:hover
+{
+	color:#FF8627;
+}
 
